--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
                 text-align: center;
                 padding-top: 50px;
             }
+
+            .modelos {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 20px;
+                justify-content: center;
+                margin-top: 10px;
+            }
+
+            .modelo {
+                border: 1px solid #000;
+                padding: 10px;
+                border-radius: 5px;
+                box-shadow: 0 0 5px #000;
+                width: 200px;
+            }
+
+            .masc {
+                background-color: #000;
+                color: #fff;
+            }
+
+            .femi {
+                background-color: #fff;
+                color: #000;
+            }
         </style>
     </head>
     <body>
@@ -24,7 +51,7 @@
             </div>
 
             <div id="modelos" class="modelos">
-
+                
             </div>
         </div>
 
